typescript/checker/tests/conformance/functions/functionOverloadErrorsSyntax.ts.stderr
error: TS1016 {
    span: Span {
        lo: BytePos(
            115,
        ),
        hi: BytePos(
            124,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/functions/functionOverloadErrorsSyntax.ts:2:27
  |
2 | function fn4a(x?: number, y: string);
  |                           ^^^^^^^^^

error: TS1016 {
    span: Span {
        lo: BytePos(
            185,
        ),
        hi: BytePos(
            194,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/functions/functionOverloadErrorsSyntax.ts:5:38
  |
5 | function fn4b(n: string, x?: number, y: string);
  |                                      ^^^^^^^^^

error: TS1014
 --> $DIR/tests/conformance/functions/functionOverloadErrorsSyntax.ts:9:25
  |
9 | function fn5(x: string, ...y: any[], z: string);
  |                         ^^^

